# 5698-netp-hw

./: .gitignore  README.md
autotools-structure/: Makefile.am  configure.ac  installer.sh
autotools-structure/examples/argc_argv_example/: Makefile.am  argc-argv-example.cpp
autotools-structure/examples/classes_example/: Makefile.am  classes-example.cpp  course.cpp  course.h  hello-world.cpp  student.cpp  student.h
autotools-structure/examples/final/: Makefile.am  ethernet-connector.cpp  ethernet-connector.h  final-example.cpp  final_example  modem.cpp  modem.h  network-adder.cpp  network-adder.h  tcp-server-connection.cpp  tcp-server-connection.h  udp-server.cpp  udp-server.h
autotools-structure/examples/functions_example/: Makefile.am  functions-example.cpp
autotools-structure/examples/homework_1/: Makefile.am  exercise-1.cpp  exercise-2.cpp  exercise_1  exercise_2
autotools-structure/examples/homework_2/: Makefile.am  Readme.md  proxy.cpp  tcp-client.cpp  udp-server.cpp
autotools-structure/examples/homework_3/: Makefile.am  homework-3.cpp  homework_3_exec  tcp-wrapper.cpp  tcp-wrapper.h
autotools-structure/examples/homework_4/: Makefile.am  exercises.txt  homework-4.cpp  homework_3_exec  homework_4_exec  socket-wrapper.cpp  socket-wrapper.h  tcp-wrapper.cpp  tcp-wrapper.h
autotools-structure/examples/homework_5/: Makefile.am  exercises.txt  homework-5.cpp  homework_5_exec  socket-wrapper.h  tcp-wrapper.cpp  udp-wrapper-test.cpp  udp-wrapper.cpp  udp-wrapper.h  udp_wrapper_test
autotools-structure/examples/lab_3_example/: Makefile.am  car.cpp  car.h  classes_usage  hello_world  lab_3_example.cpp  passenger.cpp  passenger.h
autotools-structure/examples/lab_4_example/: Makefile.am  car.cpp  car.h  exercises.txt  lab_4_example.cpp  passenger.h  truck.cpp  truck.h  vehicle-interface.cpp  vehicle-interface.h
autotools-structure/examples/lab_6_example/: Makefile.am  ethernet-connector.h  lab-6-example.cpp  service.cpp  service.h  tcp-server-connection.cpp  tcp-server-connection.h
autotools-structure/examples/lab_7_example/: Makefile.am  ethernet-connector.cpp  ethernet-connector.h  lab-7-example.cpp  my-buffer.h  tcp-server.cpp  tcp-server.h
autotools-structure/examples/lesson_1_hello_world/: Makefile.am  hello-world.cpp  hello_world
autotools-structure/examples/namespaces_example/: Makefile.am  namespaces-directives-example.cpp  namespaces-example.cpp  namespaces-example.h
autotools-structure/examples/pointers_arrays_references_example/: Makefile.am  pointers-arrays-references-example.cpp
autotools-structure/examples/socket_example/: Makefile.am  tcp-client.cpp  tcp-server.cpp  udp-client.cpp  udp-server.cpp
autotools-structure/examples/statements_example/: Makefile.am  statements-example.cpp
autotools-structure/examples/structs_enums_example/: Makefile.am  structs-enums-example.cpp  structs-enums-example.h
autotools-structure/examples/tcp_socket_example/: Makefile.am  tcp-client.cpp  tcp-server.cpp
autotools-structure/examples/types_declarations_example/: Makefile.am  types-declarations-example.cpp
