#
#  2020] Northeastern University - Network Programming
#  All Rights Reserved.
#
#  Author Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = argc_argv_example

argc_argv_example_SOURCES = argc-argv-example.cpp

argc_argv_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
argc_argv_example_LDFLAGS = @PFICT_LDFLAGS@
argc_argv_example_LDADD = @PFICT_LDADD@ 
