#
#  [2020] Northeastern University - Network Programming
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = classes_example hello_world_student_example

classes_example_SOURCES = classes-example.cpp course.cpp student.cpp

classes_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
classes_example_LDFLAGS = @PFICT_LDFLAGS@
classes_example_LDADD = @PFICT_LDADD@ 


hello_world_student_example_SOURCES = hello-world.cpp student.cpp

hello_world_student_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
hello_world_student_example_LDFLAGS = @PFICT_LDFLAGS@
hello_world_student_example_LDADD = @PFICT_LDADD@ 