#
#  [2020] Northeastern University - Network Programming
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#
 
AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = final_example

final_example_SOURCES = final-example.cpp ethernet-connector.cpp network-adder.cpp udp-server.cpp

final_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
final_example_LDFLAGS = @PFICT_LDFLAGS@
final_example_LDADD = @PFICT_LDADD@ 