#
#  [2019] Signet Lab - Programming for ICT
#  [2020] Northeastern University - Network Programming
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = functions_example

functions_example_SOURCES = functions-example.cpp

functions_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
functions_example_LDFLAGS = @PFICT_LDFLAGS@
functions_example_LDADD = @PFICT_LDADD@ 
