#
#  [2020] Northeastern University - Network Programming
#  All Rights Reserved.
#
#  Authors Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = exercise_1 exercise_2

exercise_1_SOURCES = exercise-1.cpp

exercise_1_CPPFLAGS = @PFICT_CPPFLAGS@ 
exercise_1_LDFLAGS = @PFICT_LDFLAGS@
exercise_1_LDADD = @PFICT_LDADD@ 

exercise_2_SOURCES = exercise-2.cpp

exercise_2_CPPFLAGS = @PFICT_CPPFLAGS@ 
exercise_2_LDFLAGS = @PFICT_LDFLAGS@
exercise_2_LDADD = @PFICT_LDADD@ 
