#
#  [2020] Northeastern University - Network Programming
#  All Rights Reserved.
#
#  Authors Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = proxy_example tcp_client_example udp_server_example

proxy_example_SOURCES = proxy.cpp
proxy_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
proxy_example_LDFLAGS = @PFICT_LDFLAGS@
proxy_example_LDADD = @PFICT_LDADD@

tcp_client_example_SOURCES = tcp-client.cpp
tcp_client_example_CPPFLAGS = @PFICT_CPPFLAGS@
tcp_client_example_LDFLAGS = @PFICT_LDFLAGS@
tcp_client_example_LDADD = @PFICT_LDADD@    

udp_server_example_SOURCES = udp-server.cpp
udp_server_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
udp_server_example_LDFLAGS = @PFICT_LDFLAGS@
udp_server_example_LDADD = @PFICT_LDADD@