#
#  [2020] Northeastern University - Network Programming
#  All Rights Reserved.
#
#  Authors Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = proxy_server

proxy_server_SOURCES = proxy.cpp
proxy_server_CPPFLAGS = @PFICT_CPPFLAGS@ 
proxy_server_LDFLAGS = @PFICT_LDFLAGS@
proxy_server_LDADD = @PFICT_LDADD@
