#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = homework_3_exec


homework_3_exec_SOURCES = homework-3.cpp tcp-wrapper.cpp

homework_3_exec_CPPFLAGS = @PFICT_CPPFLAGS@ 
homework_3_exec_LDFLAGS = @PFICT_LDFLAGS@
homework_3_exec_LDADD = @PFICT_LDADD@ 
