#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = homework_4_exec


homework_4_exec_SOURCES = homework-4.cpp tcp-wrapper.cpp socket-wrapper.cpp

homework_4_exec_CPPFLAGS = @PFICT_CPPFLAGS@ 
homework_4_exec_LDFLAGS = @PFICT_LDFLAGS@
homework_4_exec_LDADD = @PFICT_LDADD@ 
