#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = homework_5_exec udp_wrapper_test


homework_5_exec_SOURCES = homework-5.cpp tcp-wrapper.cpp socket-wrapper.cpp udp-wrapper.cpp
homework_5_exec_CPPFLAGS = @PFICT_CPPFLAGS@ 
homework_5_exec_LDFLAGS = @PFICT_LDFLAGS@
homework_5_exec_LDADD = @PFICT_LDADD@ 

udp_wrapper_test_SOURCES = udp-wrapper-test.cpp socket-wrapper.cpp udp-wrapper.cpp
udp_wrapper_test_CPPFLAGS = @PFICT_CPPFLAGS@ 
udp_wrapper_test_LDFLAGS = @PFICT_LDFLAGS@
udp_wrapper_test_LDADD = @PFICT_LDADD@ 
