#
# [2020] Network Programming - Northeastern University
# All Rights Reserved.
# 
# Authors Michele Polese and Pragadeesh Kumar Nithyakumar 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = lab_3_example

lab_3_example_SOURCES = lab_3_example.cpp car.cpp passenger.cpp

lab_3_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
lab_3_example_LDFLAGS = @PFICT_LDFLAGS@
lab_3_example_LDADD = @PFICT_LDADD@ 