#
# [2020] Network Programming - Northeastern University
# All Rights Reserved.
# 
# Authors Michele Polese and Pragadeesh Kumar Nithyakumar 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = lab_4_example

lab_4_example_SOURCES = lab_4_example.cpp car.cpp passenger.cpp vehicle-interface.cpp truck.cpp

lab_4_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
lab_4_example_LDFLAGS = @PFICT_LDFLAGS@
lab_4_example_LDADD = @PFICT_LDADD@ 