#
# [2020] Network Programming - Northeastern University
# All Rights Reserved.
# 
# Authors Michele Polese and Pragadeesh Kumar Nithyakumar 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = lab_6_example

lab_6_example_SOURCES = lab-6-example.cpp service.cpp ethernet-connector.cpp tcp-server-connection.cpp

lab_6_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
lab_6_example_LDFLAGS = @PFICT_LDFLAGS@
lab_6_example_LDADD = @PFICT_LDADD@ 