#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = lab_7_example

lab_7_example_SOURCES = lab-7-example.cpp tcp-server.cpp ethernet-connector.cpp

lab_7_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
lab_7_example_LDFLAGS = @PFICT_LDFLAGS@
lab_7_example_LDADD = @PFICT_LDADD@ 