#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = hello_world

hello_world_SOURCES = hello-world.cpp

hello_world_CPPFLAGS = @PFICT_CPPFLAGS@ 
hello_world_LDFLAGS = @PFICT_LDFLAGS@
hello_world_LDADD = @PFICT_LDADD@ 
