#
#  [2019] Signet Lab - Programming for ICT
#  [2020] Northeastern University - Network Programming
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = namespaces_example namespaces_directives_example

namespaces_example_SOURCES = namespaces-example.cpp

namespaces_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
namespaces_example_LDFLAGS = @PFICT_LDFLAGS@
namespaces_example_LDADD = @PFICT_LDADD@ 

namespaces_directives_example_SOURCES = namespaces-directives-example.cpp

namespaces_directives_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
namespaces_directives_example_LDFLAGS = @PFICT_LDFLAGS@
namespaces_directives_example_LDADD = @PFICT_LDADD@ 
