#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = pointers_arrays_references_example

pointers_arrays_references_example_SOURCES = pointers-arrays-references-example.cpp

pointers_arrays_references_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
pointers_arrays_references_example_LDFLAGS = @PFICT_LDFLAGS@
pointers_arrays_references_example_LDADD = @PFICT_LDADD@ 
