#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = udp_server_example

udp_server_example_SOURCES = udp-server.cpp
udp_server_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
udp_server_example_LDFLAGS = @PFICT_LDFLAGS@
udp_server_example_LDADD = @PFICT_LDADD@ 
