#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = udp_client_example \
    udp_server_example \
    tcp_client_example \
    tcp_server_example

udp_client_example_SOURCES = udp-client.cpp
udp_client_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
udp_client_example_LDFLAGS = @PFICT_LDFLAGS@
udp_client_example_LDADD = @PFICT_LDADD@ 

udp_server_example_SOURCES = udp-server.cpp
udp_server_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
udp_server_example_LDFLAGS = @PFICT_LDFLAGS@
udp_server_example_LDADD = @PFICT_LDADD@ 

tcp_client_example_SOURCES = tcp-client.cpp
tcp_client_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
tcp_client_example_LDFLAGS = @PFICT_LDFLAGS@
tcp_client_example_LDADD = @PFICT_LDADD@ 

tcp_server_example_SOURCES = tcp-server.cpp
tcp_server_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
tcp_server_example_LDFLAGS = @PFICT_LDFLAGS@
tcp_server_example_LDADD = @PFICT_LDADD@ 