#
#  [2019] Signet Lab - Programming for ICT
#  [2020] Northeastern University - Network Programming
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = statements_example

statements_example_SOURCES = statements-example.cpp

statements_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
statements_example_LDFLAGS = @PFICT_LDFLAGS@
statements_example_LDADD = @PFICT_LDADD@ 
