#
#  [2019] Signet Lab - Programming for ICT
#  [2020] Northeastern University - Network Programming
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = structs_enums_example

structs_enums_example_SOURCES = structs-enums-example.cpp

structs_enums_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
structs_enums_example_LDFLAGS = @PFICT_LDFLAGS@
structs_enums_example_LDADD = @PFICT_LDADD@ 
