#
#  [2020] Northeastern University - Network Programming
#  All Rights Reserved.
#
#  Authors Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = tcp_server_example tcp_client_example

tcp_server_example_SOURCES = tcp-server.cpp
tcp_server_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
tcp_server_example_LDFLAGS = @PFICT_LDFLAGS@
tcp_server_example_LDADD = @PFICT_LDADD@

tcp_client_example_SOURCES = tcp-client.cpp
tcp_client_example_CPPFLAGS = @PFICT_CPPFLAGS@
tcp_client_example_LDFLAGS = @PFICT_LDFLAGS@
tcp_client_example_LDADD = @PFICT_LDADD@