#
#  [2019] Signet Lab - Programming for ICT
#  All Rights Reserved.
#
#  Authors Filippo Campagnaro and Michele Polese 
#

AM_CXXFLAGS = @PFICT_CXXFLAGS@

bin_PROGRAMS = types_declarations_example

types_declarations_example_SOURCES = types-declarations-example.cpp

types_declarations_example_CPPFLAGS = @PFICT_CPPFLAGS@ 
types_declarations_example_LDFLAGS = @PFICT_LDFLAGS@
types_declarations_example_LDADD = @PFICT_LDADD@ 
